# opendev

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  fix3.patch
.github/workflows/: release.yml
.jules/: bolt.md  sentinel.md
crates/opendev-agents/: Cargo.toml
crates/opendev-agents/src/: memory_consolidation.rs  memory_consolidation_tests.rs
crates/opendev-agents/src/llm_calls/: mod.rs  tests.rs
crates/opendev-agents/src/react_loop/: execution.rs  loop_state.rs
crates/opendev-agents/src/skills/: discovery.rs
crates/opendev-channels/src/telegram/: remote_claim.rs
crates/opendev-cli/src/: helpers.rs
crates/opendev-cli/src/commands/: mod.rs
crates/opendev-cli/src/runtime/: mod.rs  query.rs  tests.rs
crates/opendev-cli/src/setup/: interactive_menu.rs  mod.rs  rail_ui.rs  tests.rs
crates/opendev-config/: Cargo.toml
crates/opendev-config/src/: paths.rs  paths_tests.rs
crates/opendev-config/src/loader/: mod.rs
crates/opendev-context/: Cargo.toml
crates/opendev-context/src/: context_picker.rs
crates/opendev-history/: Cargo.toml
crates/opendev-history/src/: index.rs  sharing.rs  snapshot.rs  topic_detector.rs
crates/opendev-http/: Cargo.toml
crates/opendev-http/src/: adapted_client.rs  adapted_client_tests.rs  auth.rs  auth_tests.rs  circuit_breaker.rs  client.rs  streaming.rs  streaming_tests.rs  user_store.rs
crates/opendev-mcp/src/: config.rs
crates/opendev-plugins/: Cargo.toml
crates/opendev-plugins/src/: fs_utils.rs  lib.rs  manager.rs
crates/opendev-repl/: Cargo.toml
crates/opendev-repl/src/: query_processor.rs  skills.rs
crates/opendev-repl/src/commands/: builtin.rs  builtin_tests.rs
crates/opendev-repl/src/handlers/: process_handler.rs
crates/opendev-runtime/: Cargo.toml
crates/opendev-runtime/src/: fs_utils.rs  lib.rs  plan_index.rs  snapshot.rs  snapshot_tests.rs  state_snapshot.rs  state_snapshot_tests.rs
crates/opendev-sandbox/src/: callback.rs  runtime.rs  sandbox.rs  session.rs
crates/opendev-tools-core/: Cargo.toml
crates/opendev-tools-core/src/: sanitizer.rs
crates/opendev-tools-impl/src/: browser.rs  file_edit.rs  insert_symbol.rs  memory.rs  memory_tests.rs  multi_edit.rs  notebook_edit.rs  schedule.rs  truncation.rs  truncation_tests.rs  web_screenshot.rs  worktree.rs  worktree_tests.rs
crates/opendev-tools-lsp/: Cargo.toml
crates/opendev-tools-lsp/src/: utils.rs
crates/opendev-tui/src/: history.rs
crates/opendev-web/: Cargo.toml
crates/opendev-web/src/: embedded.rs  lib.rs  server.rs  server_tests.rs
crates/opendev-web/static/: index.html
docs/: providers.md
web-ui/: vite.config.ts
web-ui/src/hooks/: useDebounce.ts
(+52 files in other folders)
