[package]
name = "opendev-tools-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LSP integration for OpenDev: language server management, JSON-RPC protocol, and symbol caching"

[dependencies]
opendev-models = { workspace = true }
opendev-config = { workspace = true }
opendev-tools-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
url = "2"
dirs = "6"
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
